tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0241/input.js
function a(eval) { "use strict"; }
